https://github.com/LizAleja/home-page-

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-<meta charset="utf-8">
-<meta name=" viewport" conent= "width=advice-width,inicial,scale=1.0"> 
-<title>Liz ALejandra Albancando</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            </nav>
-        </header>
-<main>
-    <h1>Liz Alejandra Albancando Robles | WWD130 </h1>
-    <img src="images/profile.jpg.JPG"alt="Hello,My name is Liz ALejandra Albancando Robles"width="200">
-    <p>Hello!My name is Liz Albancando and I am from Bogota, Colombia. I enjoy playing the piano, dancing and traveling. </p>
-</main>
-<footer>
-    <p>©2024 Liz Albancando , Bogota , Colombia</p>
-</footer>
-    </body> 
+
+<head>
+    <meta charset="utf-8">
+    <meta name=" viewport" conent= "width=advice-width,inicial,scale=1.0"> 
+    <title>Liz ALejandra Albancando</title>
+    <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
+    <meta name = "author" content = "Liz Albancando">
+
+    <link rel="stylesheet" href="styles/styles.css"> 
+</head>
+
+<body>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="wwr/">Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Liz Alejandra Albancando Robles | WDD130 </h1>
+      <img src="images/profile.jpg.JPG"alt="Hello,My name is Liz ALejandra Albancando Robles"width="200">
+      <p>Hello!My name is Liz Albancando and I am from Bogota, Colombia. I enjoy playing the piano, dancing and traveling. </p>
+    </main>
+    <aside>
+      <h2>Colombia</h2>
+      <img src = "images/colombia.jpg.jpg" alt = "Colombia palmas">
+      <p>" Quindio is department of Colombia located in the western center. It is a state recognized for great coffee agriculture and the friendly people known as "paisas"</p>
+    </aside>
+    <footer>
+      <p>©2024 Liz Albancando , Bogota , Colombia</p>
+    </footer>
+</body> 
 
 </html>  
