fix path styles

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,7 +8,7 @@
     <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
     <meta name = "author" content = "Liz Albancando">
 
-    <link rel="stylesheet" href="styles/styles.css"> 
+    <link rel="stylesheet" href="../styles/styles.css"> 
 </head>
 
 <body>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <h1>Liz Alejandra Albancando Robles | WDD130 </h1>
+      <h1>Liz Alejandra Albancando Robles  | WDD130 </h1>
       <img src="images/profile.jpg.JPG"alt="Hello,My name is Liz ALejandra Albancando Robles"width="200">
       <p>Hello!My name is Liz Albancando and I am from Bogota, Colombia. I enjoy playing the piano, dancing and traveling. </p>
     </main>
