--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name=" viewport" conent= "width=advice-width,inicial,scale=1.0"> 
+    <meta name=" viewport" content= "width=advice-width,inicial,scale=1.0"> 
     <title>Liz ALejandra Albancando</title>
     <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
     <meta name = "author" content = "Liz Albancando">
@@ -21,7 +21,7 @@
     </header>
     <main>
       <h1>Liz Alejandra Albancando Robles  | WDD130 </h1>
-      <img src="images/profile.jpg.JPG"alt="Hello,My name is Liz ALejandra Albancando Robles"width="200">
+      <img src="images/profile.jpg.JPG" alt="Hello,My name is Liz ALejandra Albancando Robles" width="200">
       <p>Hello!My name is Liz Albancando and I am from Bogota, Colombia. I enjoy playing the piano, dancing and traveling. </p>
     </main>
     <aside>
