temple names added

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,3 +1,4 @@
+<!--12 July 2024-->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -9,6 +10,10 @@
     <meta name = "author" content = "Liz Albancando">
 
     <link rel="stylesheet" href="../styles/styles.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -16,18 +21,43 @@
       <nav>
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="wwr/site-plan-rafting.html">Site Plan</a>
+        <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profile</a>
       </nav>
     </header>
     <main>
       <h1>Liz Alejandra Albancando Robles  | WDD130 </h1>
       <img src="images/profile.jpg.JPG" alt="Hello,My name is Liz ALejandra Albancando Robles" width="200">
-      <p>Hello!My name is Liz Albancando and I am from Bogota, Colombia. I enjoy playing the piano, dancing and traveling. </p>
-    </main>
-    <aside>
-      <h2>Colombia</h2>
+      <p>Hello! My name is Liz Albancando. I was born in Bogota, Colombia. I enjoy playing the piano, violin and sing, learning new things, 
+        dancing and traveling. I also enjoy cooking and baking. Part of this is very important to me because what I eat plays a big 
+        role in how I feel and the energy I feel to put into things. 
+        I work out often and thats why I also like to keep a balance diet where food is teasty but also healthy.
+        I have 5 siblings and I am the number three. I consider myself very social and also I can adjust to enviroments where I can 
+        also be just with myself.
+        I have been thinking to study programming and even it took me a little bit to decide, I have most of my siblings studying
+        simmilar things, so they have been encoraging me and sometimes being as a tutor.
+        I see myself as a developer in the future. 
+        I want to be able to work with machine learning on data and projects where the programs are design to make changes 
+        in the physical enviroment.  
+        I know Sofware Development has a huge area where I could find different oportunities for work where I will find more 
+        enjoyable. I am not there yet, but I have been putting enough time and energy to learn and practice as much as I can.</p>
+
+      <ul class="box indent">
+        <li><a href="https://churchofjesuschristtemples.org/bogota-colombia-temple/"
+            target= "_blank">Bogota Colombia Temple</a></li>
+        <li><a href="https://churchofjesuschristtemples.org/barranquilla-colombia-temple/"
+            target="_blank">Barranquilla Colombia Temple</a></li>
+        <li><a href="https://churchofjesuschristtemples.org/lima-peru-los-olivos-temple/"
+            target="_blank">Lima Peru Los Olivos Temple</a></li>
+      </ul>
+
+      </main>
+      <aside class="box">
+        <h2>Colombia</h2>
       <img src = "images/colombia.jpg.jpg" alt = "Colombia palmas">
       <p>" Quindio is department of Colombia located in the western center. It is a state recognized for great coffee agriculture and the friendly people known as "paisas"</p>
+    
+    
     </aside>
     <footer>
       <p>©2024 Liz Albancando , Bogota , Colombia</p>
