--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name=" viewport" content= "width=advice-width,inicial,scale=1.0"> 
-    <title>Liz ALejandra Albancando T</title>
+    <title>Liz ALejandra Albancando</title>
     <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
     <meta name = "author" content = "Liz Albancando">
 
