--- a/index.html/index.html
+++ b/index.html/index.html
@@ -20,8 +20,8 @@
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">Site Plan</a>
+        <a href="/wwr/about.html">Rafting Website</a> 
+        <a href="/wwr/site-plan-rafting.html">Site Plan</a>
         <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profile</a>
       </nav>
     </header>
