--- a/index.html/index.html
+++ b/index.html/index.html
@@ -22,7 +22,7 @@
         <a href="#">Home</a>
         <a href="/wwr/about.html">Rafting Website</a> 
         <a href="/wwr/site-plan-rafting.html">Site Plan</a>
-        <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profile</a>
+        <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profiles</a>
       </nav>
     </header>
     <main>
