--- a/index.html/index.html
+++ b/index.html/index.html
@@ -20,9 +20,9 @@
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="/wwdd130/wwr/about.html">Rafting Website</a> 
-        <a href="/wwdd130/wwr/site-plan-rafting.html">Site Plan</a>
-        <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profiles</a>
+        <a href="/wwr/about.html">Rafting Website</a> 
+        <a href="/wwr/site-plan-rafting.html">Site Plan</a>
+        <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profile</a>
       </nav>
     </header>
     <main>
