--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name=" viewport" content= "width=advice-width,inicial,scale=1.0"> 
-    <title>Robles</title>
+    <title>Liz Robles</title>
     <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
     <meta name = "author" content = "Liz Albancando">
 
@@ -21,7 +21,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="/wwr/about.html">Rafting Website</a> 
-        <a href="/wwr/site-plan-rafting.html">Site Plan</a>
+        <a href="wdd130/wwr/site-plan-rafting.html">Site Plan</a>
         <a href="https://www.linkedin.com/in/liz-watson1427/">Linkedin Profile</a>
       </nav>
     </header>
