--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting Hobbie | River Trip Boating | Home </title>
+    <meta name = "description" content = "Liz Albancando's BYU-Idaho WDD 130 course home page">
+    <meta name = "author" content = "Liz Albancando">
     <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
