--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,7 +20,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Site Plan</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
 
         </nav>
     </header>
