--- a/wwr/index.html
+++ b/wwr/index.html
@@ -28,7 +28,7 @@
     <main>
       <h1>Liz Alejandra Albancando Robles  | WDD130 </h1>
       <img src="images/profile.jpg.JPG" alt="Hello,My name is Liz ALejandra Albancando Robles" width="200">
-      <p>Hello! My name is Liz Albancando. I was born in Bogota, Colombia. I enjoy playing the piano, violin and sing, learning new things, 
+      <p>Hello! My name is Liz Alejandra Albancando. I was born in Bogota, Colombia. I enjoy playing the piano, violin and sing, learning new things, 
         dancing and traveling. I also enjoy cooking and baking. Part of this is very important to me because what I eat plays a big 
         role in how I feel and the energy I feel to put into things. 
         I work out often and thats why I also like to keep a balance diet where food is teasty but also healthy.
